--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  background-color: #333;
+}
+
 /* temporal classes */
 .pkm-type-normal {
   background-color: #a8a878;
